APP-3: fix for displaing the images for product details if the images are 10 for a product to be visible and able to scroll

--- a/src/app/product/modals/product-detail/product-detail.component.css
+++ b/src/app/product/modals/product-detail/product-detail.component.css
@@ -2,10 +2,12 @@ body {
   margin-top: 20px;
 }
 
-/*panel*/
 .panel {
   border: none;
   box-shadow: none;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: auto;
 }
 
 .panel-heading {
@@ -143,7 +145,7 @@ body {
 
 .pro-img-list {
   margin: 10px 0 0 -15px;
-  width: 100%;
+  width: auto;
   display: inline-block;
 }
 
@@ -156,4 +158,7 @@ body {
 .pro-d-head {
   font-size: 18px;
   font-weight: 300;
+}
+.price{
+  margin-bottom: 10px;
 }
